--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
+    "build": "webpack",
     "start": "webpack-dev-server --mode development --open --hot"
   },
   "main": "dist/bundle.js",
