--- a/package.json
+++ b/package.json
@@ -25,5 +25,12 @@
   "dependencies": {
     "hotkeys-js": "^3.7.3",
     "preact": "^10.3.2"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
   }
 }
