--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "types": "dist/types/index.d.ts",
   "license": "MIT",
   "devDependencies": {
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "3.8.2",
     "webpack": "^4.41.5",
