--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^3.4.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "3.8.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.10",
