--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,12 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "jsx": "react",
-    "jsxFactory": "h"
+    "jsxFactory": "h",
+    "baseUrl": "./",
+    "paths": {
+      "@friendly/elements/*": ["lib/friendly/elements/*"],
+    }
   },
-  "include": ["src", "lib/friendlee"],
+  "include": ["src", "lib/friendly/elements"],
   "exclude": ["node_modules"]
 }
