--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
@@ -27,6 +28,8 @@
   },
   "dependencies": {
     "hotkeys-js": "^3.7.3",
+    "monaco-editor": "^0.20.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
     "preact": "^10.3.4"
   },
   "prettier": {
