--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "friendly-engine",
   "version": "1.0.0",
-  "description": "WYSIWYG HMI Builder",
+  "description": "WYSIWYG Web App Builder",
   "private": true,
   "scripts": {
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "build": "webpack",
-    "start": "webpack-dev-server --mode development --open --hot"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development --open --hot"
   },
   "main": "dist/bundle.js",
   "types": "dist/types/index.d.ts",
