--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "terser": "3.14.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "hotkeys-js": "^3.7.3",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
