--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
+    /* warnings/errors */
     "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false,
+    "allowUnreachableCode": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    /* others */
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "module": "esnext",
     "target": "ES2017",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
     "sourceMap": true,
     "jsx": "react",
     "jsxFactory": "h",
