--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "prettier": "2.0.5",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
