--- a/v3/package.json
+++ b/v3/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.0",
     "hotkeys-js": "^3.8.1",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
+    "monaco-editor": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
